                            =======================
                            History For AdvanceSCAN
                            =======================


ADVANCESCAN VERSION 1.17 2012/11
================================

* In the report output (--report) don't complain about preliminary BIOS.


ADVANCESCAN VERSION 1.16 2012/11
================================

* Added support for CHD versions 4 and 5.
* Fixed the printout of the CHD hash.
* Fixed samples extension handling.
* Removed zlib.dll from the Windows distribution. It's no more required.


ADVANCESCAN VERSION 1.15 2012/11
================================

* Fixed sampleof recognition.


ADVANCESCAN VERSION 1.14 2008/12
================================

* Fixed the recognition of the XML 'inbios' atttribute. It's an
  important fix if you use the 'filter' feature.
* Fixed support for 64 bits architectures.


ADVANCESCAN VERSION 1.13 2004/12
================================

* New rom zips are now created only if at least one unique
  rom is found. Roms shared with other games don't
  trigger the zip creation. For example, galaga88
  and pacmania share the rom ns1-mcu.bin. This
  functionality prevents the creation of the galaga88
  zip from a correct copy of pacmania using only the
  ns1-mcu.bin file.
* Relaxed a consistency check for the local header in zip files.
  The crc and size entries are allowed to contain the real
  value also if a data descriptor is present.


ADVANCESCAN VERSION 1.12 2004/11
================================

* In -listinfo files are now allowed crc with the "0x"
  prefix.


ADVANCESCAN VERSION 1.11 2004/09
================================

* Minor changes at the source. Removed the gamediff.* files.
* Fixed a compilation problem with gcc 3.4.


ADVANCESCAN VERSION 1.10 2004/08
================================

* Added support for .chd files. Check the new -K option.
* The program now automatically renames any damaged .zip
  and .chd file instead of aborting.