@@ -1,10 +1,12 @@
 .TH "History For AdvanceSCAN" 1
 .SH NAME
 advscan \(hy History For AdvanceSCAN
-.SH ADVANCESCAN VERSION 1.17 2012/11 
+.SH ADVANCESCAN VERSION 1.17 2012/12 
 .PD 0
 .IP \(bu
 In the report output (\(hy\(hyreport) don\(cqt complain about preliminary BIOS.
+.IP \(bu
+Now in git repository.
 .PD
 .SH ADVANCESCAN VERSION 1.16 2012/11 
 .PD 0
