@@ -5,11 +5,14 @@
 <body>
 <center><h2>History For AdvanceSCAN</h2></center>
 <h2> 
-AdvanceSCAN Version 1.17 2012/11
+AdvanceSCAN Version 1.17 2012/12
 </h2>
 <ul>
 <li>
 In the report output (--report) don't complain about preliminary BIOS.
+</li>
+<li>
+Now in git repository.
 </li>
 </ul>
 <h2> 
